perubhan kedua index.html

--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
   <title>index</title>
 </head>
 <body>
-  <p>ini index</p>
+  <p>ini index File ini dilakukan perubahan kedua</p>
 </body>
 </html>
